--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.profiles.active=@activatedProperties@
+
 # DB configuration
 spring.datasource.url = jdbc:postgresql://localhost:5432/civ
 spring.datasource.username = postgres
