--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -86,6 +86,11 @@
 			<artifactId>mapstruct-processor</artifactId>
 			<version>${mapstruct-processor.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
     </dependencies>
 
 	<build>
