Fix unique card bug Add fixture loading

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -2,6 +2,8 @@
 spring.datasource.url = jdbc:postgresql://${RDS_HOSTNAME}:${RDS_PORT}/${RDS_DB_NAME} 
 spring.datasource.username = ${RDS_USERNAME}
 spring.datasource.password = ${RDS_PASSWORD}
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto = update
 
 # HTTP configuration
 server.port = 5000
