Securize game data loading

--- a/backend/src/main/resources/application-local.properties
+++ b/backend/src/main/resources/application-local.properties
@@ -9,3 +9,5 @@ spring.datasource.password=sa
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
+application.admin.username=admin
+application.admin.password=password
