--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -7,3 +7,6 @@ spring.jpa.hibernate.ddl-auto = update
 
 # HTTP configuration
 server.port = 5000
+
+application.admin.username=${ADMIN_USERNAME}
+application.admin.password=${ADMIN_PASSWORD}
