Fix load game data pipeline

--- a/.github/workflows/deploy-gamedata.yml
+++ b/.github/workflows/deploy-gamedata.yml
@@ -16,5 +16,5 @@ jobs:
           ADMIN_USERNAME: ${{ secrets.ADMIN_USERNAME }}
           ADMIN_PASSWORD: ${{ secrets.ADMIN_PASSWORD }}
         run: |
-          cat game-data.json | curl -X PUT -u "$ADMIN_USERNAME:$ADMIN_PASSWORD" -H "Content-Type: application/json" --data-binary @- http://localhost:8080/game-data
+          cat game-data.json | curl -X PUT -u "$ADMIN_USERNAME:$ADMIN_PASSWORD" -H "Content-Type: application/json" --data-binary @- http://api.civ.guilloy.fr/game-data
       
